--- a/07_WindowTheme/WindowChrome/SystemButtons.xaml
+++ b/07_WindowTheme/WindowChrome/SystemButtons.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:v="clr-namespace:WindowChrome"
+             x:Name="root"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -25,7 +26,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <StackPanel Height="{Binding Height, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"
+    <StackPanel Height="{Binding Height, Mode=OneWay, ElementName=root}"
                 Orientation="Horizontal" >
         <!-- 最小化ボタン
                 Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
@@ -33,23 +34,25 @@
         -->
         <Button Content="0"
                 Style="{StaticResource CustomCaptionButtonBaseKey}"
-                Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
+                Foreground="{Binding Foreground, Mode=OneWay, ElementName=root}"
                 Command="{x:Static SystemCommands.MinimizeWindowCommand}" />
         <!-- 最大化ボタン
                 IsEnabled="{Binding ResizeMode, Converter={StaticResource MaximizeCaptionButtonEnableConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                 Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                 ToolTip="{Binding WindowState, Converter={StaticResource MaximizeCaptionButtonTooltipConverter}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
         -->
-        <Button Content="{Binding WindowState, Converter={StaticResource MaximizeCaptionButtonContentConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+        <Button Content="{Binding WindowState,
+                                  Converter={StaticResource MaximizeCaptionButtonContentConverterKey},
+                                  RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                 Style="{StaticResource CustomCaptionButtonBaseKey}"
-                Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
+                Foreground="{Binding Foreground, Mode=OneWay, ElementName=root}"
                 Command="{x:Static SystemCommands.MaximizeWindowCommand}"/>
         <!-- 閉じるボタン
                 ToolTip="閉じる"
         -->
         <Button Content="r"
                 Style="{StaticResource CustomCaptionButtonBaseKey}"
-                Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}"
+                Foreground="{Binding Foreground, Mode=OneWay, ElementName=root}"
                 Command="{x:Static SystemCommands.CloseWindowCommand}"/>
     </StackPanel>
 </UserControl>
