--- a/07_WindowTheme/WindowChrome/MainWindow.xaml
+++ b/07_WindowTheme/WindowChrome/MainWindow.xaml
@@ -66,14 +66,14 @@
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
                                                            RelativeSource={RelativeSource FindAncestor,
-                                                           AncestorType={x:Type v:MainWindow}}}"
+                                                           AncestorType={x:Type Window}}}"
                                          Value="True">
                                 <Setter Property="Background"
                                         Value="{StaticResource CaptionBarActiveBorderBrushKey}" />
                             </DataTrigger>
                             <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
                                                            RelativeSource={RelativeSource FindAncestor,
-                                                           AncestorType={x:Type v:MainWindow}}}"
+                                                           AncestorType={x:Type Window}}}"
                                          Value="False">
                                 <Setter Property="Background"
                                         Value="{StaticResource InactiveBorderBrushKey}" />
@@ -135,7 +135,7 @@
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding IsActive, Mode=OneWay,
                                                                RelativeSource={RelativeSource FindAncestor,
-                                                               AncestorType={x:Type v:MainWindow}}}"
+                                                               AncestorType={x:Type Window}}}"
                                              Value="False">
                                     <Setter Property="Foreground"
                                             Value="{StaticResource InactiveForegroundBrushKey}" />
@@ -166,7 +166,9 @@
                 <!-- 最小化、最大化、閉じるボタン -->
                 <v:SystemButtons Grid.Column="3"
                                  HorizontalAlignment="Right" 
-                                 VerticalAlignment="Top" />
+                                 VerticalAlignment="Top"
+                                 Height="{Binding Height, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"
+                                 Foreground="{Binding Foreground, Mode=OneWay, ElementName=CaptionTitle}" />
             </Grid>
 
             <!-- コンテンツ -->
